--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="less/style.less">
 </head>
-<body class="catalog-page">
+<body>
   <header class="page-header">
     <h1 class="visually-hidden">Мишка</h1>
     <nav class="main-nav  main-nav--opend  main-nav--nojs">
@@ -49,19 +49,21 @@
   </nav>
 </header>
 <main class="catalog-page">
+
   <div class="catalog-page__header">
     <h2 class="catalog-title">Каталог товаров</h2>
   </div>
+
   <div class="catalog-page__wrapper">
     <section class="item-blocks__wrapper">
       <article class="item-block">
         <div class="item-block__photo">
-          <img src="img/photo-1-mobile@1x.jpg" width="258" height="195" alt="Зайчик-попрыгайчик">
+          <img class="item-block__photo-item" src="img/photo-1-mobile@1x.jpg" width="258" height="195" alt="Зайчик-попрыгайчик">
         </div>
         <div class="item-block__body">
           <div class="item-block__info">
-            <h3 class="item-block__info--title">Зайчик-попрыгайчик</h3>
-            <p class="item-block__info--description">Рост 30см, вес 200г </p>
+            <h3 class="item-block__info-title">Зайчик-попрыгайчик</h3>
+            <p class="item-block__info-description">Рост 30см, вес 200г </p>
           </div>
           <div class="item-price">
             <span class="price" >1200 руб.</span>
@@ -71,12 +73,12 @@
       </article>
       <article class="item-block">
         <div class="item-block__photo">
-          <img src="img/photo-2-mobile@1x.jpg" width="258" height="195" alt="Корзинка для белья">
+          <img class="item-block__photo-item" src="img/photo-2-mobile@1x.jpg" width="258" height="195" alt="Корзинка для белья">
         </div>
         <div class="item-block__body">
           <div class="item-block__info">
-            <h3 class="item-block__info--title">Корзинка для белья</h3>
-            <p class="item-block__info--description">Диаметр 15см, высота 10см</p>
+            <h3 class="item-block__info-title">Корзинка для белья</h3>
+            <p class="item-block__info-description">Диаметр 15см, высота 10см</p>
           </div>
           <div class="item-price">
             <span class="price">690 руб.</span>
@@ -86,12 +88,12 @@
       </article>
       <article class="item-block">
         <div class="item-block__photo">
-          <img src="img/photo-3-mobile@1x.jpg" width="258" height="195" alt="Большая корзинка для игрушек">
+          <img class="item-block__photo-item" src="img/photo-3-mobile@1x.jpg" width="258" height="195" alt="Большая корзинка для игрушек">
         </div>
         <div class="item-block__body">
           <div class="item-block__info">
-            <h3 class="item__title">Большая корзинка <br> для игрушек</h3>
-            <p class="item__description">Диаметр 30см, высота 30см</p>
+            <h3 class="item-block__info-title">Большая корзинка <br> для игрушек</h3>
+            <p class="item-block__info-description">Диаметр 30см, высота 30см</p>
           </div>
           <div class="item-price">
             <span class="price">1500 руб.</span>
@@ -101,12 +103,16 @@
       </article>
     </section>
     <section class="videocontent">
+
       <h3 class="videocontent__title">Процесс производства</h3>
+      <img class="videocontent__photo" src="img/video-mobile@1x.jpg" width="258" height="150" alt="Процесс производства">
+
       <div class="videocontent__player">
-        <img src="img/video-mobile@1x.jpg" width="258" height="150" alt="Процесс производства">
+
+        <p class="videocontent__text">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как пояляются наши товары.</p>
+        <a href="" class="videocontent__order btn">Сделать заказ</a>
       </div>
-      <p class="videocontent__text">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как пояляются наши товары.</p>
-      <a href="" class="videocontent__order btn">Сделать заказ</a>
+
     </section>
     <section class="modal-block modal-block--opened  modal-block--nojs">
       <div class="modal-block__wrapper">
