--- a/form.html
+++ b/form.html
@@ -9,32 +9,31 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="less/style.less">
 </head>
-<body class="form-page">
+<body class="form">
+
   <header class="page-header">
     <h1 class="visually-hidden">Мишка</h1>
-    <div class="page-header__logo">
-      <a>
-       <img src="img/logo-mobile.svg" width="92" height="40" alt="Mishka">
-     </a>
-   </div>
-   <div class="main-nav__wrapper">
-    <nav class="main-nav  main-nav--closed  main-nav--nojs">
+    <nav class="main-nav  main-nav--opend  main-nav--nojs">
       <a href="" class="main-nav__toggle"></a>
       <ul class="main-nav__items">
-        <li class="main-nav__item">
+        <li class="main-nav__item  main-nav__item--catalog">
           <a href="catalog.html">Каталог товаров</a>
         </li>
-        <li class="main-nav__item">
-          <a href="form.html">Вязание на заказ</a>
+        <li class="main-nav__item  main-nav__item--order">
+          <a>Вязание на заказ</a>
         </li>
       </ul>
-    </nav>
-    <ul class="main-nav__service">
-      <li class="main-nav__item ">
-        <a href="" class="search">Поиск по сайту</a>
+      <div class="man-nav__logo">
+        <a href="index.html">
+         <img src="img/logo-mobile.svg" width="92" height="40" alt="Mishka">
+       </a>
+     </div>
+     <ul class="main-nav__service">
+      <li class="main-nav__item  main-nav__item--search">
+        <a href="#" >Поиск по сайту</a>
       </li>
-      <li class="main-nav__item">
-        <a href=""  class="cart">Корзина: пока пуста</a>
+      <li class="main-nav__item  main-nav__item--cart">
+        <a href="#">Корзина: пока пуста</a>
       </li>
     </ul>
     <ul class="main-nav__sell-out">
@@ -45,86 +44,132 @@
         <a href="#">Распродажа</a>
       </li>
     </ul>
-    <ul class="main-nav__free-delivery">
-      <li class="main-nav__item--grey">Бесплатная доставка по миру</li>
+    <ul class="main-nav__delivery">
+      <li class="main-nav__item   main-nav__item--delivery">Бесплатная доставка по миру</li>
     </ul>
-  </div>
+  </nav>
 </header>
+
 <main class="form-page">
-  <section class="form-page__header">
-    <h2 class="form-page__title">Вязание на заказ</h2>
-    <p>Мы будем рады воплотить  жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали</p>
-  </section>
-  <div class="form-page__wrapper">
-    <section class="filter">
-      <form class="filter" action="#" method="post">
-        <fieldset class="filter__wrapper  filter__wrapper--type">
-          <legend class="filter__title">Тип</legend>
-          <div class="filter__field">
-            <input class="filter__radio  filter__radio--cheked" type="radio" name="type" id="type-interior" checked>
-            <label for="type-interior" class="filter__type filter__type--interior"> Аксессуар для <br> интерьера</label>
+
+
+ <section class="form-page__header">
+      <h2 class="form-page__title">Вязание на заказ</h2>
+      <p>Мы будем рады воплотить  жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали</p>
+</section>
+
+<div class="form-page__wrapper">
+   <form action="#" method="post">
+      <section class="filter">
+        <div class="filter__wrapper filter__wrapper--type">
+
+            <h3 class="filter__title">Тип</h3>
+
+            <div class=" field__wrapper field__wrapper--type">
+              <div class="filter__field">
+                <input class="filter__radio filter__radio--cheked" type="radio" name="type" id="type-interior" checked>
+                <label for="type-interior" class="filter__type filter__type--interior"> Аксессуар для интерьера</label>
+              </div>
+
+              <div class="filter__field">
+                <input class="filter__radio" type="radio" name="type" id="type-toy">
+                <label for="type-toy" class="filter__type filter__type--toy"> Детская игрушка</label>
+              </div>
+
+            </div>
           </div>
-          <div class="filter__field">
-            <input class="filter__radio" type="radio" name="type" id="type-toy">
-            <label for="type-toy"  class="filter__type filter__type--toy"> Детская Игрушка</label>
+        </section>
+        <section class="filter__wrapper  filter__wrapper--color">
+
+            <h3 class="filter__title">Цвет</h3>
+
+            <div class="field__wrapper field__wrapper--color">
+              <ul class="filter__list">
+                <li class="field__list">
+                  <input class="filter__input filter__input--checked" type="checkbox" name="color" id="color-1" checked>
+                  <label for="color-1" class="filter__type">Белый</label>
+                </li>
+
+                <li class="field__list">
+                  <input class="filter__input filter__input--checked" type="checkbox" name="color-2" id="color-2" checked>
+                  <label for="color-2" class="filter__type">Серый</label>
+                </li>
+
+                <li class="field__list">
+                  <input class="filter__input" type="checkbox" name="color-3" id="color-3">
+                  <label for="color-3" class="filter__type">"Тиффани"</label>
+                </li>
+                <li class="field__list">
+                  <input class="filter__input" type="checkbox" name="color-4" id="color-4">
+                  <label for="color-4" class="filter__type">Черный</label>
+                </li>
+
+                <li class="field__list">
+                  <input class="filter__input" type="checkbox" name="color-5" id="color-5">
+                  <label for="color-5" class="filter__type" >Розовый</label>
+                </li>
+
+                <li class="field__list">
+                  <input class="filter__input " type="checkbox" name="color-6" id="color-6">
+                  <label for="color-6" class="filter__type" >Оранжевый</label>
+                </li>
+              </ul>
+            </div>
+         </section>
+
+          <section  class="orderform">
+          <h3 class="orderform__title">ФИО</h3>
+           <div  class="orderform__wrapper contactform__wrapper--name">
+            <div class="input__field">
+              <label for="firstname">Имя:</label>
+              <input type="text" name="username" id="firstname" placeholder="Введите ваше имя" required>
+            </div>
+            <div class="input__field">
+              <label for="lastname">Фамилия:</label>
+              <input type="text" name="lastname" id="lastname" placeholder="Укажите фамилию" required>
+            </div>
+            <div class="input__field">
+              <label for="middlename">Отчество:</label>
+              <input type="text" name="middlename" id="middlename" placeholder="Отчество, если желаете">
+            </div>
           </div>
-        </fieldset>
-        <fieldset class="filter__wrapper  filter__wrapper--color">
-          <legend class="filter__title">Цвет</legend>
-          <div class="filter__field">
-            <input class="filter__input filter__input--checked" type="checkbox" name="color" id="color-1" checked>
-            <label for="color-1" class="filter__type">Белый</label>
+        </section>
+
+         <section class="contactform">
+          <div  class="contactform__wrapper  contactform__wrapper--tel">
+
+            <div class="input__field">
+              <label class="contactform__title contactform__title--tel">ТЕЛ</label>
+              <input type="tel" name="tel" id="tel" pattern="[0-9]{1}-[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder="+7 ХХХ ХХ ХХ" required>
+            </div>
+
+
+            <div class="input__field">
+              <label class="contactform__title contactform__title--email">E-mail</label>
+              <input type="email" name="email" id="email" placeholder="Ваш Email" required>
+            </div>
           </div>
-          <div class="filter__field">
-            <input class="filter__input filter__input--checked" type="checkbox" name="color-2" id="color-2" checked>
-            <label for="color-2" class="filter__type">Серый</label>
+       </section>
+
+        <section class="extraform">
+
+            <div class="input__field">
+              <label class="extraform__title">ДОП</label>
+              <textarea name="message" id="message" placeholder="Опишите все ваши пожелания к заказу" required></textarea>
+            </div>
+
+          <div class="extraform__button">
+            <div class="note">
+               <p class="mobile-note">Все поля обязательны для заполнения</p>
+               <p class="tablet-note">Все поля являются обязательными </p>
+            </div>
+            <div class="submit-button">
+               <input type="submit" id="submitbtn" name="submitbtn" value="Отправить заказ">
+            </div>
           </div>
-          <div class="filter__field">
-            <input class="filter__input" type="checkbox" name="color-3" id="color-3">
-            <label for="color-3" class="filter__type">"Тиффани"</label>
-          </div>
-          <div class="filter__field">
-            <input class="filter__input" type="checkbox" name="color-4" id="color-4">
-            <label for="color-4" class="filter__type">Черный</label>
-          </div>
-          <div class="filter__field">
-            <input class="filter__input" type="checkbox" name="color-5" id="color-5">
-            <label for="color-5" class="filter__type" >Розовый</label>
-          </div>
-          <div class="filter__field">
-            <input class="filter__input " type="checkbox" name="color-6" id="color-6">
-            <label for="color-6" class="filter__type" >Оранжевый</label>
-          </div>
-        </fieldset>
-        <fieldset class="contactform__wrapper contactform__wrapper--name">
-          <legend class="contactform__title  contactform__title--name">ФИО</legend>
-          <div class="contactform__field">
-            <label for="firstname">Имя:</label>
-            <input type="text" name="username" id="firstname" placeholder="Введите ваше имя" required>
-          </div>
-          <div class="contactform__field">
-            <label for="lastname">Фамилия:</label>
-            <input type="text" name="lastname" id="lastname" placeholder="Укажите фамилию" required>
-          </div>
-          <div class="contactform__field">
-            <label for="middlename">Отчество:</label>
-            <input type="text" name="middlename" id="middlename" placeholder="Отчество, если желаете">
-          </div>
-        </fieldset>
-        <div class="contactform__wrapper">
-          <label class="contactform__title  contactform__title--tel">ТЕЛ</label>
-          <input type="tel" name="tel" id="tel" pattern="[0-9]{1}-[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder="+7 ХХХ ХХ ХХ" required>
-          <label class="contactform__title  contactform__title--email">E-mail</label>
-          <input type="email" name="email" id="email" placeholder="Ваш Email" required>
-          <label class="contactform__title  contactform__title--extra">ДОП</label>
-          <textarea name="message" id="message" placeholder="Опишите все ваши пожелания к заказу" required></textarea>
-        </div>
-        <div class="note">
-          <p>Все поля обязательны для заполнения</p>
-        </div>
-        <input type="submit" id="submitbtn" name="submitbtn" value="Отправить заказ">
-      </form>
-    </section>
+        </section>
+
+     </form>
   </div>
 </main>
 <footer class="page-footer">
