--- a/index.html
+++ b/index.html
@@ -10,117 +10,122 @@
   <link rel="stylesheet" href="less/style.less">
 </head>
 <body>
-  <header class="page-header">
-    <h1 class="visually-hidden">Мишка</h1>
-    <nav class="main-nav  main-nav--opend  main-nav--nojs">
-      <a href="" class="main-nav__toggle"></a>
-      <ul class="main-nav__items  ">
-        <li class="main-nav__item  main-nav__item--catalog">
-          <a href="catalog.html">Каталог товаров</a>
+  <div class="page-header__wrapper">
+    <header class="page-header">
+      <h1 class="visually-hidden">Мишка</h1>
+      <nav class="main-nav  main-nav--opend  main-nav--nojs">
+        <a href="" class="main-nav__toggle"></a>
+        <ul class="main-nav__items">
+          <li class="main-nav__item  main-nav__item--catalog">
+            <a href="catalog.html">Каталог товаров</a>
+          </li>
+          <li class="main-nav__item  main-nav__item--order">
+            <a href="form.html">Вязание на заказ</a>
+          </li>
+        </ul>
+        <div class="man-nav__logo">
+          <a>
+           <img src="img/logo-mobile.svg" width="92" height="40" alt="Mishka">
+         </a>
+       </div>
+       <ul class="main-nav__service">
+        <li class="main-nav__item  main-nav__item--search">
+          <a href="#" >Поиск по сайту</a>
         </li>
-        <li class="main-nav__item  main-nav__item--order">
-          <a href="form.html">Вязание на заказ</a>
+        <li class="main-nav__item  main-nav__item--cart">
+          <a href="#">Корзина: пока пуста</a>
         </li>
       </ul>
-      <div class="man-nav__logo">
-        <a>
-         <img src="img/logo-mobile.svg" width="92" height="40" alt="Mishka">
-       </a>
-     </div>
-     <ul class="main-nav__service">
-      <li class="main-nav__item  main-nav__item--search">
-        <a href="#" >Поиск по сайту</a>
-      </li>
-      <li class="main-nav__item  main-nav__item--cart">
-        <a href="#">Корзина: пока пуста</a>
-      </li>
-    </ul>
-    <ul class="main-nav__sell-out">
-      <li class="main-nav__item">
-        <a href="#">Новые поступления</a>
-      </li>
-      <li class="main-nav__item">
-        <a href="#">Распродажа</a>
-      </li>
-    </ul>
-    <ul class="main-nav__delivery">
-      <li class="main-nav__item   main-nav__item--delivery">Бесплатная доставка по миру</li>
-    </ul>
-  </nav>
-</header>
+      <ul class="main-nav__sell-out">
+        <li class="main-nav__item">
+          <a href="#">Новые поступления</a>
+        </li>
+        <li class="main-nav__item">
+          <a href="#">Распродажа</a>
+        </li>
+      </ul>
+      <ul class="main-nav__delivery">
+        <li class="main-nav__item   main-nav__item--delivery">Бесплатная доставка по миру</li>
+      </ul>
+    </nav>
+  </header>
+</div>
 <main>
-  <div class="main-page__header">
-    <h2 class="main-page__title">Милые штуки ручной работы для дома</h2>
-  </div>
-  <div class="content__wrapper">
-    <section class="features">
-      <ul class="feature-items">
-        <li class="feature-item feature-item--top">
-          <a href="">Предметы интерьера</a>
-        </li>
-        <li class="feature-item feature-item--bottom">
-          <a href="">Детские игрушки</a>
-        </li>
-      </ul>
-    </section>
-    <section class="headline-item">
-      <article class="headline-item__wrapper">
-        <div class="headline-item__header">
-          <h2 class="headline-item__title">Вязаные корзинки</h2>
-          <b class="headline-item__label">Товар недели</b>
-        </div>
-        <div class="headline-item__blok">
-          <div class="headline-options">
-            <p class="headline-item__info">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
-            <table class="headline-item__table">
-              <tr>
-                <td class="headline-item__column  column-1">Цвет:</td>
-                <td class="headline-item__column  column-2">«Тиффани»/серый</td>
-              </tr>
-              <tr>
-                <td class="headline-item__column  column-1">Диаметр:</td>
-                <td class="headline-item__column  column-2">25 см</td>
-              </tr>
-              <tr>
-                <td class="headline-item__column  column-1">Высота:</td>
-                <td class="headline-item__column  column-2">15 см</td>
-              </tr>
-            </table>
-          </div>
-          <div class= "headline-item__photo">
-          </div>
-        </div>
-        <div class="headline-item__footer">
-          <span class="headline-item__price">Цена: 990 руб.</span>
-          <a href="" class="headline-item__button  button">Заказать</a>
-        </div>
-      </article>
-    </section>
-    <section class="advantages">
-      <h2 class="advantages__title">Коротко о нас</h2>
-      <div class="advantages__wrapper">
-        <ul class="advantages__column  advantages__column--right">
-          <li class="advantages__item  advantages__item--1">Экологичеки чистые материалы</li>
-          <li class="advantages__item  advantages__item--2" >Скандинавский стиль по российской цене</li>
-          <li class="advantages__item  advantages__item--3">Увеличивает лайки на фотографиях</li>
+  <div class="main-page__wrapper">
+    <div class="main-page__header">
+      <h2 class="main-page__title">Милые штуки ручной работы для дома</h2>
+    </div>
+      <section class="features">
+        <ul class="feature-items">
+          <li class="feature-item feature-item--top">
+            <a href="">Предметы интерьера</a>
+          </li>
+          <li class="feature-item feature-item--bottom">
+            <a href="">Детские игрушки</a>
+          </li>
         </ul>
-        <ul class="advantages__column  advantages__column--left">
-          <li class="advantages__item  advantages__item--4">Связано вручную с любовью и умилением</li>
-          <li class="advantages__item  advantages__item--5">Поддержка отечественного производителя</li>
-          <li class="advantages__item  advantages__item--6">Поставляется в подарочной упаковке</li>
-        </ul>
-      </div>
-    </section>
-    <section class="reviews">
-      <div class="reviews__wrapper">
-        <h2 class="reviews__title">Отзывы</h2>
-        <a  class="reviews-write__button button" href="">Написать</a>
-      </div>
-      <blockquote class="reviews__item">
-        <p>Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильнее, а также набирают больше лайков!</p>
-        <cite class="reviews__auhor-name">Анастасия Красильникова</cite>
-        <cite class="reviews__auhor-contacts">@misssssiskras</cite>
-      </blockquote>
+      </section>
+      <section class="headline-item">
+        <article class="headline-item__wrapper">
+          <div class="headline-item__header">
+            <h2 class="headline-item__title">Вязаные корзинки</h2>
+            <b class="headline-item__label">Товар недели</b>
+          </div>
+          <div class="headline-item__block">
+            <div class="headline-options">
+              <p class="headline-item__info">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
+              <table class="headline-item__table">
+                <tr>
+                  <td class="headline-item__column  column-1">Цвет:</td>
+                  <td class="headline-item__column  column-2">«Тиффани»/серый</td>
+                </tr>
+                <tr>
+                  <td class="headline-item__column  column-1">Диаметр:</td>
+                  <td class="headline-item__column  column-2">25 см</td>
+                </tr>
+                <tr>
+                  <td class="headline-item__column  column-1">Высота:</td>
+                  <td class="headline-item__column  column-2">15 см</td>
+                </tr>
+              </table>
+            </div>
+            <div class= "headline-item__photo">
+            </div>
+            <div class="headline-item__footer">
+              <span class="headline-item__price">Цена: 990 руб.</span>
+              <a href="" class="headline-item__button  button">Заказать</a>
+            </div>
+          </div>
+        </article>
+      </section>
+      <section class="advantages">
+        <article class="advantages__wrapper">
+          <h2 class="advantages__title">Коротко о нас</h2>
+          <div class="advantages__list">
+            <ul class="advantages__column  advantages__column--right">
+              <li class="advantages__item  advantages__item--1">Экологичеки чистые материалы</li>
+              <li class="advantages__item  advantages__item--2" >Скандинавский стиль по российской цене</li>
+              <li class="advantages__item  advantages__item--3">Увеличивает лайки на фотографиях</li>
+            </ul>
+            <ul class="advantages__column  advantages__column--left">
+              <li class="advantages__item  advantages__item--4">Связано вручную с любовью и умилением</li>
+              <li class="advantages__item  advantages__item--5">Поддержка отечественного производителя</li>
+              <li class="advantages__item  advantages__item--6">Поставляется в подарочной упаковке</li>
+            </ul>
+          </div>
+        </article>
+      </section>
+     <section class="reviews">
+        <div class="reviews__wrapper">
+         <div class="rewievs__header">
+          <h2 class="reviews__title">Отзывы</h2>
+          <a  class="reviews-write__button button" href="">Написать</a>
+        </div>
+        <blockquote class="reviews__item">
+          <p>Я молодая мама, но все равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильнее, а также набирают больше лайков!</p>
+          <cite class="reviews__author-name">Анастасия Красильникова</cite>
+          <cite class="reviews__author-contacts">@misssssiskras</cite>
+        </blockquote>
       <div class="reviews__toggle">
         <a  class="toggle  toggle--prev" href="" >
           <img src="img/icon-left-arrow.svg" width="50" height="25" alt="Назад">
@@ -129,9 +134,12 @@
           <img src="img/icon-right-arrow.svg" width="50" height="25" alt="Вперед">
         </a>
       </div>
+      </div>
+      <div class="reviews__photo">
+      </div>
     </section>
     <section class="modal-block modal-block--opened  modal-block--nojs">
-      <div class="modal-block__wrapper visually-hidden">
+      <article class="modal-block__wrapper visually-hidden">
         <h1 class="modal-block__title"></h1>
         <p>Выберите размер</p>
         <div class="modal-block__buttons">
@@ -140,12 +148,11 @@
           <button class="modal-block__button" type="button">L</button>
         </div>
         <a class="button  modal-block__basket" href="">Добавить</a>
-      </div>
+      </article>
     </section>
-  </div>
   <section class="contacts">
-    <div class="contacts__wrapper">
-      <h2 class="contacts_title">Контакты</h2>
+    <article class="contacts__wrapper">
+      <h2 class="contacts__title">Контакты</h2>
       <div class="contacts__block">
         <div class="contacts__email">
           <p>e-mail:</p>
@@ -156,17 +163,17 @@
           <p> г. Санкт-Петербург, ул. Большая Конюшенная, д.19/8, офис 101</p>
         </div>
       </div>
-    </section>
-
+    </article>
     <div class="map">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123713!2d30.32089461573673!3d59.93879686904836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1470392419787" width="320" height="458" style="border-width: 1px;" allowfullscreen></iframe>
     </div>
-    <div class="contacts__button">
-      <form  action="contact-button.php" method="post">
-        <input type="submit" name="review" value="Напишите нам">
-      </form>
-    </div>
+  </section>
+  <div class="contacts__button">
+    <form  action="contact-button.php" method="post">
+      <input type="submit" name="review" value="Напишите нам">
+    </form>
   </div>
+</div>
 </main>
 <footer class="page-footer">
   <div class="page-footer__wrapper">
